<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item android:id="@+id/musicMenu"
            android:title="@string/music"
            android:icon="@drawable/ic_baseline_music_note_24"
            app:showAsAction="ifRoom"/>

        <item android:title="@string/offline"
            android:id="@+id/offlineMenu"
            android:icon="@drawable/ic_baseline_sd_card_24"
            app:showAsAction="ifRoom"/>

        <item app:showAsAction="ifRoom"
            android:title="@string/profile"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:id="@+id/profileMenu"/>

    </group>



</menu>