<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:sothree="http://schemas.android.com/apk/res-auto"
    tools:menu="@menu/main_menu"
xmlns:tools="http://schemas.android.com/tools">

    <com.sothree.slidinguppanel.SlidingUpPanelLayout android:id="@+id/sliding_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        sothree:umanoPanelHeight="68dp"
        android:layout_above="@+id/cardView"
        sothree:umanoShadowHeight="4dp"
        tools:context=".MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:clickable="true"
                android:layout_alignParentTop="true"
                android:visibility="visible"
                android:id="@+id/recyclerViewSongsFrag"/>

            <androidx.fragment.app.FragmentContainerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:visibility="visible"
                android:id="@+id/fragContainer"/>

        </RelativeLayout>


        <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/playIng"
            android:background="@drawable/gradiane_bg"
            tools:context=".PlayerActivity">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relativeFirst"
                android:layout_alignParentTop="true"
                android:layout_marginTop="12dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="2dp"
                    android:id="@+id/fixedRelative">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="10dp"
                        android:layout_marginStart="15dp"
                        android:id="@+id/cardFixed"
                        app:cardElevation="0dp">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/oneimage"
                            android:id="@+id/imageFixed"
                            android:layout_alignParentStart="true"/>

                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_toEndOf="@+id/cardFixed"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_toStartOf="@+id/playBtnFixed"
                        android:id="@+id/linearFixed">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18.7sp"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:singleLine="true"
                            android:text="@string/this_is_titless"
                            android:id="@+id/titleFixed"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="17sp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:singleLine="true"
                            android:text="@string/this_is_titles"
                            android:id="@+id/artistFixed"/>


                    </LinearLayout>

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_pause"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="15dp"
                        app:fabCustomSize="50dp"
                        app:tint="@color/second"
                        app:elevation="1dp"
                        app:borderWidth="0dp"
                        app:pressedTranslationZ="1dp"
                        android:id="@+id/playBtnFixed"/>


                </RelativeLayout>

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeFirst"
                android:layout_centerHorizontal="true"
                app:cardElevation="20dp"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="110dp"
                android:id="@+id/cardImage">

                <ImageView
                    android:id="@+id/albumArtIv"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:src="@color/purple_200" />
            </androidx.cardview.widget.CardView>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/rr"
                android:layout_below="@+id/cardImage">

                <TextView
                    android:id="@+id/songNameTvPlayer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:singleLine="true"
                    android:text="@string/this_is_song_name"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/artistNameTvPlayer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/songNameTvPlayer"
                    android:layout_centerHorizontal="true"
                    android:singleLine="true"
                    android:text="@string/this_is_artist_name"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/startTimeTvv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="25sp"
                android:layout_marginBottom="130dp"
                android:text="0:00"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/totalTimeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="25sp"
                android:layout_marginBottom="130dp"
                android:text="4:28"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <SeekBar
                android:id="@+id/seekBarPlayerFra"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="110dp"
                android:maxHeight="13dp"
                android:minHeight="5dp"
                android:paddingStart="16dp"
                android:progressBackgroundTint="@color/white"
                android:paddingEnd="16dp"
                android:splitTrack="false"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearPlaFra"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="65dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_baseline_shuffle_24"
                    android:layout_marginEnd="10dp"
                    android:id="@+id/shuffleIv"
                    android:layout_marginStart="10dp"
                    app:tint="@color/white"/>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:id="@+id/fastRevForTenSec"
                    android:src="@drawable/ic_baseline_replay_10_24"
                    app:tint="@color/white"/>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_baseline_skip_previous_24"
                    android:layout_marginEnd="5dp"
                    android:id="@+id/skipPrevIv"
                    app:tint="@color/white"/>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_baseline_pause_circle_filled_24"
                    android:id="@+id/playPause"
                    app:tint="@color/white"/>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_baseline_skip_next_24"
                    android:layout_marginStart="5dp"
                    android:id="@+id/skipNextIv"
                    app:tint="@color/white"/>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_baseline_forward_10_24"
                    android:layout_marginEnd="10dp"
                    android:id="@+id/fastForTenSec"
                    android:layout_marginStart="10dp"
                    app:tint="@color/white"/>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_baseline_repeat_one_24"
                    android:layout_marginEnd="10dp"
                    android:id="@+id/repeatIv"
                    android:layout_marginStart="10dp"
                    app:tint="@color/white"/>



            </LinearLayout>

        </RelativeLayout>


    </com.sothree.slidinguppanel.SlidingUpPanelLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/cardView"
        android:foregroundGravity="center_vertical"
        sothree:cardElevation="0dp">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/second"
            sothree:itemTextAppearanceActive="@color/white"
            sothree:itemTextAppearanceInactive="@color/main"
            sothree:menu="@menu/bottom_nav_menu"
            android:layout_gravity="center_vertical"
            android:id="@+id/bottomNavView"/>

    </androidx.cardview.widget.CardView>




</RelativeLayout>